--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="main_tab_text_color_active">#1789d5</color>
     <color name="main_tab_text_color_default">#949494</color>
     <color name="title_blue">#1962dd</color>
+    <color name="title_blue2">#425a85</color>
     <color name="white">#ffffff</color>
 
     <color name="light_grey_transparent">#99BFBFBF</color>
