--- a/android/app/src/main/res/layout/list_item_checkable.xml
+++ b/android/app/src/main/res/layout/list_item_checkable.xml
@@ -17,7 +17,7 @@
         android:layout_toRightOf="@id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="vertical">
 
@@ -27,12 +27,14 @@
             android:layout_height="wrap_content"
             android:textColor="#000000"
             android:textStyle="bold"
-            android:textSize="18sp"/>
+            android:maxLength="10"
+            android:ellipsize="end"
+            android:textSize="16sp"/>
         <TextView
             android:id="@+id/symbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="15sp"
+            android:textSize="14sp"
             android:textColor="#5f5f5f"/>
     </LinearLayout>
 
@@ -53,8 +55,8 @@
     <LinearLayout
         android:id="@+id/notificationSwitch"
         android:layout_toLeftOf="@+id/pushToTop"
-        android:layout_width="50dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="40dp"
+        android:layout_marginRight="15dp"
         android:layout_height="match_parent"
         android:gravity="center">
 
