--- a/android/app/src/main/res/layout/list_item_checkable.xml
+++ b/android/app/src/main/res/layout/list_item_checkable.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="70dp"
+    android:background="@color/white"
     android:padding="10dp">
     <CheckBox
         android:id="@+id/checkbox"
