--- a/android/app/src/main/res/layout/stock_edit_native_content.xml
+++ b/android/app/src/main/res/layout/stock_edit_native_content.xml
@@ -90,7 +90,7 @@
     <LinearLayout
         android:id="@+id/rlBottom"
         android:layout_width="match_parent"
-        android:background="#efefef"
+        android:background="#ffffff"
         android:layout_alignParentBottom="true"
         android:layout_height="60dp"
         android:paddingLeft="20dp"
@@ -124,28 +124,33 @@
 
     </LinearLayout>
 
-    <com.mobeta.android.dslv.DragSortListView
-        xmlns:dslv="http://schemas.android.com/apk/res/com.tradehero.cfd"
-        android:id="@+id/stockList"
+    <LinearLayout android:layout_width="match_parent"
         android:layout_below="@id/rlTop"
+        android:background="#f2f2f2"
         android:layout_above="@id/rlBottom"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="3dp"
-        android:choiceMode="multipleChoice"
-        android:dividerHeight="1px"
-        android:padding="3dp"
-        dslv:click_remove_id="@id/click_remove"
-        dslv:collapsed_height="1px"
-        dslv:drag_enabled="true"
-        dslv:drag_handle_id="@id/drag_handle"
-        dslv:drag_scroll_start="0.33"
-        dslv:drag_start_mode="onDown"
-        dslv:float_alpha="0.6"
-        dslv:float_background_color="#ffffff"
-        dslv:remove_enabled="true"
-        dslv:remove_mode="clickRemove"
-        dslv:slide_shuffle_speed="0.3" />
+        android:layout_height="match_parent">
+        <com.mobeta.android.dslv.DragSortListView
+            xmlns:dslv="http://schemas.android.com/apk/res/com.tradehero.cfd"
+            android:id="@+id/stockList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
+            android:choiceMode="multipleChoice"
+            android:dividerHeight="1px"
+            android:padding="3dp"
+            dslv:click_remove_id="@id/click_remove"
+            dslv:collapsed_height="1px"
+            dslv:drag_enabled="true"
+            dslv:drag_handle_id="@id/drag_handle"
+            dslv:drag_scroll_start="0.33"
+            dslv:drag_start_mode="onDown"
+            dslv:float_alpha="0.6"
+            dslv:float_background_color="#ffffff"
+            dslv:remove_enabled="true"
+            dslv:remove_mode="clickRemove"
+            dslv:slide_shuffle_speed="0.3" />
+    </LinearLayout>
+
 
 
 
