--- a/ios/TH_CFD/Base.lproj/MainStoryboard.storyboard
+++ b/ios/TH_CFD/Base.lproj/MainStoryboard.storyboard
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="4FL-Ng-cKU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="4FL-Ng-cKU">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
@@ -22,23 +25,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ezc-LV-pIO" userLabel="Top View">
+                                <rect key="frame" x="0.0" y="20" width="375" height="26.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全部产品" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCJ-vF-tJa">
+                                        <rect key="frame" x="41" y="0.0" width="65.5" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <color key="textColor" red="0.6705882352941176" green="0.792156862745098" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="置顶" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhq-GU-dFC">
+                                        <rect key="frame" x="267" y="0.0" width="33" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <color key="textColor" red="0.6705882353" green="0.79215686269999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="拖动" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="53d-61-UGc">
+                                        <rect key="frame" x="327" y="0.0" width="33" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <color key="textColor" red="0.6705882353" green="0.79215686269999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提醒" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sbg-mV-MQL">
+                                        <rect key="frame" x="210.5" y="0.0" width="33" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <color key="textColor" red="0.6705882353" green="0.79215686269999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -59,16 +67,18 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="56" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="9Dc-ei-Pxv">
+                                <rect key="frame" x="0.0" y="46.5" width="375" height="558.5"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EditStockCell" id="Gbq-ve-Epu" customClass="EditOwnStockCell" customModule="TH_CFD" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="56"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gbq-ve-Epu" id="mkn-Ki-hfN">
-                                            <frame key="frameInset" width="375" height="55"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="55.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TGt-XL-eg5">
+                                                    <rect key="frame" x="7" y="6" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="J7A-Ag-T1e"/>
                                                         <constraint firstAttribute="width" constant="44" id="mL0-8j-YHz"/>
@@ -79,6 +89,7 @@
                                                     </connections>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alphabet(谷歌)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QcP-IO-3zC">
+                                                    <rect key="frame" x="53" y="11.5" width="130" height="21.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="130" id="cck-Qd-kDc"/>
                                                     </constraints>
@@ -87,6 +98,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="US" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TkX-2n-Hbe">
+                                                    <rect key="frame" x="53" y="34" width="15" height="10"/>
                                                     <color key="backgroundColor" red="0.0" green="0.69803921568627447" blue="0.99607843137254903" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="10" id="J7x-5x-lAF"/>
@@ -97,11 +109,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gfz-EQ-g5m">
+                                                    <rect key="frame" x="71" y="31" width="28.5" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emP-fR-UTC" userLabel="Alert Button">
+                                                    <rect key="frame" x="232.5" y="6" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="dEX-3B-gPS"/>
                                                         <constraint firstAttribute="width" constant="44" id="plZ-WK-OBJ"/>
@@ -112,6 +126,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cXW-WS-D2N">
+                                                    <rect key="frame" x="296" y="6" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="44" id="OXL-1f-Yfy"/>
                                                         <constraint firstAttribute="height" constant="44" id="P4R-L9-0EX"/>
@@ -155,8 +170,10 @@
                                 </connections>
                             </tableView>
                             <view alpha="0.95999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IQG-T1-UU8" userLabel="Bottom View">
+                                <rect key="frame" x="0.0" y="605" width="375" height="62"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xu9-Ut-wRa">
+                                        <rect key="frame" x="194" y="9.5" width="170" height="43"/>
                                         <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <state key="normal" title="删除">
@@ -167,6 +184,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YtX-PF-eiI">
+                                        <rect key="frame" x="11" y="9.5" width="171" height="43"/>
                                         <color key="backgroundColor" red="0.098039215686274508" green="0.38431372549019605" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                         <state key="normal" title="全部">
@@ -212,14 +230,18 @@
                     <connections>
                         <outlet property="alertHeaderLabel" destination="Sbg-mV-MQL" id="NEd-fl-jDv"/>
                         <outlet property="allButton" destination="YtX-PF-eiI" id="lfI-D8-MAm"/>
+                        <outlet property="allLabel" destination="KCJ-vF-tJa" id="b6X-zU-QmZ"/>
                         <outlet property="deleteButton" destination="Xu9-Ut-wRa" id="xY6-2T-Xxj"/>
                         <outlet property="editTableView" destination="9Dc-ei-Pxv" id="7i2-67-Sqc"/>
+                        <outlet property="moveLabel" destination="53d-61-UGc" id="t8H-of-ZPU"/>
+                        <outlet property="remindLabel" destination="Sbg-mV-MQL" id="j7U-F9-EzV"/>
+                        <outlet property="topLabel" destination="dhq-GU-dFC" id="jpG-Gj-74r"/>
                         <outlet property="topLabelTrailConstraint" destination="NVJ-Ph-uPb" id="zpn-1a-rH1"/>
                         <outlet property="topView" destination="ezc-LV-pIO" id="0jA-TH-Rgr"/>
-                        <outletCollection property="headLabels" destination="KCJ-vF-tJa" id="ZSc-rA-QQD"/>
-                        <outletCollection property="headLabels" destination="Sbg-mV-MQL" id="oBl-wr-alT"/>
-                        <outletCollection property="headLabels" destination="dhq-GU-dFC" id="mFf-vJ-m5v"/>
-                        <outletCollection property="headLabels" destination="53d-61-UGc" id="d7q-vC-Xqa"/>
+                        <outletCollection property="headLabels" destination="KCJ-vF-tJa" collectionClass="NSMutableArray" id="ZSc-rA-QQD"/>
+                        <outletCollection property="headLabels" destination="Sbg-mV-MQL" collectionClass="NSMutableArray" id="oBl-wr-alT"/>
+                        <outletCollection property="headLabels" destination="dhq-GU-dFC" collectionClass="NSMutableArray" id="mFf-vJ-m5v"/>
+                        <outletCollection property="headLabels" destination="53d-61-UGc" collectionClass="NSMutableArray" id="d7q-vC-Xqa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jnq-2V-39B" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -232,9 +254,4 @@
         <image name="Top" width="22" height="22"/>
         <image name="Unselect" width="22" height="22"/>
     </resources>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
-    </simulatedMetricsContainer>
 </document>
